# food-dispenser-core-app

./: CMakeLists.txt  README.md
config/: mosquitto_config.json
src/: CMakeLists.txt  food_disp.cxx  food_disp.h  food_disp_types.h
src/motor/: motor.cxx  motor.h
src/mqtt/: fd_mosquitto.cxx  fd_mosquitto.h
